# bakabakaband

./: .gitmodules  Build-Windows-Release-Package.ps1  Makefile.am  THIRD-PARTY-NOTICES.txt  configure.ac  index.css  index.html
.github/scripts/: check-newline.sh
.github/workflows/: build-test-with-msvc.yml  create-cache-for-ccache.yml  create-release.yml  publish-spoiler-page.yml  pull-request-status-check.yml
Bakabakaband/Bakabakaband/: Bakabakaband.vcxproj  Bakabakaband.vcxproj.filters
VisualStudio/Bakabakaband/: Bakabakaband.vcxproj  Bakabakaband.vcxproj.filters
document/: article-20250827.html  article-20250905.html  article-20250923.html  article-20251214.html  list.html
doxygen/: Bakabakaband.doxyfile
lib/edit/: ArtifactDefinitions.jsonc  ArtifactDefinitions.txt  BaseitemDefinitions.jsonc  BaseitemDefinitions.txt  ClassMagicDefinitions.jsonc  ClassSkillDefinitions.txt  CreatureParty.jsonc  DungeonDefinitions.txt  EgoDefinitions.txt  MonraceDefinitions.jsonc  MonraceParty.jsonc  MonsterRaceDefinitions.txt  QuestDefinitionList.txt  SpellDefinitions.jsonc  TerrainDefinitions.txt  TownDefinitionList.txt  VaultDefinitions.txt  WildernessDefinition.txt  q0seinourawaza.txt  q_INM01.txt
lib/file/: a_cursed_j.txt  monspeak_j.txt  rumors.txt  rumors_j.txt  silly_j.txt
lib/help/: jmonster.txt  jobjects.txt  jversion.txt  monster.txt
lib/pref/: font-xxx.prf
schema/: BaseitemDefinitions.schema.json  CreaturePartyDefinitions.schema.json  MonraceDefinitions.schema.json  MonsterMessages.schema.json
src/: Makefile.am  ang_jp.rc  main-gcu.cpp  main-win.cpp  main-x11.cpp  main.cpp
src/achievement/: achievement-checker.cpp  achievement-checker.h  achievement-definition.h  achievement-definitions.cpp  achievement-definitions.h  achievement-tracker.cpp  achievement-tracker.h  achievement-types.h
src/action/: activation-execution.cpp  movement-execution.cpp  mutation-execution.cpp  open-close-execution.cpp  racial-execution.cpp  run-execution.cpp  tunnel-execution.cpp
src/alliance/: alliance-amber.cpp  alliance-amber.h  alliance-angartha.cpp  alliance-angartha.h  alliance-anor-londo.cpp  alliance-anor-londo.h  alliance-arioch.cpp  alliance-arioch.h  alliance-aryan-family.cpp  alliance-aryan-family.h  alliance-ashina-clan.cpp  alliance-ashina-clan.h  alliance-avarin-lords.cpp  alliance-avarin-lords.h  alliance-basam-empire.cpp  alliance-basam-empire.h  alliance-binzyou-buddhism.cpp  alliance-binzyou-buddhism.h  (+129 more)
update/: update.html
(+780 files in other folders)
